# INTERACTIVE_FICTION

./: .pre-commit-config.yaml  README.md  pyproject.toml
interactive_fiction/book/: admin.py  apps.py  models.py  urls.py  views.py
interactive_fiction/book/migrations/: 0001_initial.py  0002_bookpage.py  0003_pagelink.py  0004_pagelink_name.py  0005_alter_pagelink_from_page.py  0006_book_first_page.py  0007_book_cover_art.py  0008_alter_book_cover_art_bookprogress.py  0009_item_bookprogress_items.py  0010_bookpage_items.py  0011_pagelink_required_items_alter_bookpage_items_and_more.py  0012_alter_pagelink_required_items.py  0013_remove_pagelink_required_items_pagelink_items.py
interactive_fiction/book/models/: book.py  item.py  page.py
interactive_fiction/book/templates/: base.html  book.html  book_index.html  page.html
interactive_fiction/core/: settings.py  urls.py
interactive_fiction/ifbook/: admin.py  apps.py  urls.py  views.py
interactive_fiction/ifbook/forms/: registration.py
interactive_fiction/ifbook/models/: book.py  item.py  page.py  page_link.py  progress.py
interactive_fiction/ifbook/templates/: base.html  book.html  book_index.html  page.html
interactive_fiction/interactive_fiction/: asgi.py  settings.py  urls.py  wsgi.py
interactive_fiction/tests/: conftest.py
interactive_fiction/tests/test_forms/: test_registration_form.py
interactive_fiction/tests/test_models/: test_book.py  test_item.py  test_page.py  test_page_link.py  test_progress.py
interactive_fiction/tests/test_views/: test_book.py  test_page.py  test_take_item.py  (+1 more)
(+3 files in other folders)
